--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ html{
 h5{
     font-size: 25px;
     font-weight: 600;
-    display: inline-block;margin: 20px !important;
+    display: inline-block;
+    margin: 20px !important;
 }
 /*about section start here*/
 .about_section{
@@ -418,12 +419,20 @@ a.active, a:hover{
     ul{
         position: fixed;
         width: 50%;
-        height: 300px;
-        background-color: #ff5e31;
+        height: 100vh;
+        background-color: #ff5e31ce;
         top: 60px;
-        left: -100%;
+        right: -100%;
         text-align: center;
         transition: all .5s;
+    }
+    .checkbtn{
+        position: fixed;
+        top:0;
+        right:0;
+        z-index: 999;
+        background: transparent;
+        border: none;
     }
     nav ul li{
         display: block;
@@ -438,7 +447,7 @@ a.active, a:hover{
         color: rgb(1, 1, 10);
     }
     #check:checked ~ ul{
-        left: 0;
+        right: 0;
     }
 }
 /* media query start here*/
